test/libyul/yulSyntaxTests/zkevm/invalid/to_l1_typed.yul
{
	$zk_to_l1(0xa, 0xa, 0xb)
}
// ====
// dialect: evmTyped
// ----
// TypeError 3781: (13-16): Expected a value of type "bool" but got "u256".
